--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,8 @@
 # Object files
-*.o
-*.ko
-*.obj
-*.elf
+*.dim
+*.type
+*.bin
 
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
+# Folder
+work
+data
